tests/script_runtime_errors/non_arr_access/error.txt
Error: 
    1 | event.snot[42]
      |            ^^ Conflicting types, got integer but expected array